fix build of benchmark